src/objects/Mapping_Object__c.object
<CustomObject>
    <fields>
        <fullName>Data_Mover_Scheduled_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Mover Scheduled Job</label>
        <referenceTo>Data_Mover_Scheduled_Job__c</referenceTo>
        <relationshipLabel>Mapping Objects</relationshipLabel>
        <relationshipName>Mapping_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Job_Id__c</fullName>
        <description>The id of the scheduled job assigned to map these objects.</description>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTargetLabel__c</fullName>
        <formula>Source_Object_Label__c + Target_Object_Label__c</formula>
        <label>SourceTargetLabel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_External_ID_API_Name__c</fullName>
        <label>Source External ID API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_External_ID_Field_Type__c</fullName>
        <label>Source External ID Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_External_ID_Field__c</fullName>
        <label>Source External ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_External_ID_is_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the source external id is the name field of the object.</description>
        <label>Source External ID is Name Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Object_API_Name__c</fullName>
        <label>Source Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object_Label__c</fullName>
        <label>Source Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether the mapping object has already been synchronized during the execution of the job.</description>
        <label>Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_External_ID_API_Name__c</fullName>
        <label>Target External ID API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_External_ID_Field_Type__c</fullName>
        <label>Target External ID Field Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_External_ID_Field__c</fullName>
        <label>Target External ID Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_External_ID_is_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked the external id field is the name field of the object.</description>
        <label>Target External ID is Name Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Object_API_Name__c</fullName>
        <label>Target Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object_Label__c</fullName>
        <label>Target Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Character_Job_Id__c</fullName>
        <formula>CASESAFEID( Scheduled_Job_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Character Job Id</label>
        <type>Text</type>
    </fields>
    <label>Mapping Object</label>
    <nameField>
        <label>MappingObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>